--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,14 @@ script:
                 end
               end'
   - julia -e 'using Pkg; Pkg.build(); Pkg.test("RegisterCore"; coverage=false)'
-after_success:
-# update the documentation
-  - julia -e 'using Pkg; Pkg.add("Documenter")'
-  - julia -e 'using RegisterCore; cd(dirname(dirname(pathof(RegisterCore)))); ENV["DOCUMENTER_DEBUG"] = "true"; include(joinpath("docs", "make.jl"))'
+
+jobs:
+  include:
+    - stage: "Documentation"
+      julia: 1.0
+      os: linux
+      script:
+        - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd()));
+                                               Pkg.instantiate()'
+        - julia --project=docs/ docs/make.jl
+      after_success: skip
