--- a/.travis.yml
+++ b/.travis.yml
@@ -3,30 +3,18 @@ language: julia
 os:
   - linux
 julia:
-  - 0.7
-  - 1.0
+  - 1.1
   - 1.2
 notifications:
   email: false
 script:
   - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-  - julia -e 'using Pkg, LibGit2;
-              user_regs = joinpath(DEPOT_PATH[1],"registries");
-              mkpath(user_regs);
-              all_registries = Dict("General" => "https://github.com/JuliaRegistries/General.git",
-                            "HolyLabRegistry" => "git@github.com:HolyLab/HolyLabRegistry.git");
-              Base.shred!(LibGit2.CachedCredentials()) do creds
-                for (reg, url) in all_registries
-                  path = joinpath(user_regs, reg);
-                  LibGit2.with(Pkg.GitTools.clone(url, path; header = "registry $reg from $(repr(url))", credentials = creds)) do repo end
-                end
-              end'
-  - julia -e 'using Pkg; Pkg.build(); Pkg.test("RegisterCore"; coverage=false)'
+  - julia -e 'using Pkg; pkg"registry add https://github.com/HolyLab/HolyLabRegistry.git"; Pkg.build(); Pkg.test("RegisterCore"; coverage=false)'
 
 jobs:
   include:
     - stage: "Documentation"
-      julia: 1.0
+      julia: 1.2
       os: linux
       script:
         - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd()));
