--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,11 @@ julia:
   - 1.2
 notifications:
   email: false
+
 script:
   - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-  - julia -e 'using Pkg; pkg"registry add https://github.com/HolyLab/HolyLabRegistry.git"; Pkg.build(); Pkg.test("RegisterCore"; coverage=false)'
+  - julia -e 'using Pkg; pkg"registry add General https://github.com/HolyLab/HolyLabRegistry.git"'
+  - julia -e 'using Pkg; Pkg.build(); Pkg.test(;coverage=true)'
 
 jobs:
   include:
@@ -17,7 +19,11 @@ jobs:
       julia: 1.2
       os: linux
       script:
-        - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd()));
+        - julia --project=docs/ -e 'using Pkg; pkg"registry add General https://github.com/HolyLab/HolyLabRegistry.git";
+                                               Pkg.develop(PackageSpec(path=pwd()));
                                                Pkg.instantiate()'
         - julia --project=docs/ docs/make.jl
       after_success: skip
+
+after_success:
+  - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
