--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ julia = "^1.1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 
 [targets]
-test = ["Test"]
+test = ["Interpolations", "Test"]
