--- a/Project.toml
+++ b/Project.toml
@@ -1,19 +1,22 @@
 name = "RegisterCore"
 uuid = "67712758-55e7-5c3c-8e85-dda1d7758434"
 authors = ["Tim Holy <tim.holy@gmail.com>"]
-version = "1.0.0"
+version = "0.2.0"
 
 [deps]
 CenterIndexedArrays = "46a7138f-0d70-54e1-8ada-fb8296f91f24"
-ColorTypes = "3da002f7-5984-5a60-b8a6-cbb66c0b333f"
-Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
+ImageCore = "a09fc81d-aa75-5fe9-8630-4744c3626534"
+ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
 
 [compat]
+CenterIndexedArrays = "0.1, 0.2"
+ImageCore = "0.8.1"
+ImageFiltering = "0.5, 0.6"
 julia = "^1.1"
 
 [extras]
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
 test = ["Interpolations", "Test"]
