--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "RegisterCore"
 uuid = "67712758-55e7-5c3c-8e85-dda1d7758434"
 authors = ["Tim Holy <tim.holy@gmail.com>"]
-version = "0.2.1"
+version = "0.2.2"
 
 [deps]
 CenterIndexedArrays = "46a7138f-0d70-54e1-8ada-fb8296f91f24"
@@ -12,7 +12,7 @@ ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
 CenterIndexedArrays = "0.2"
 ImageCore = "0.8.1"
 ImageFiltering = "0.5, 0.6"
-julia = "^1.1"
+julia = "1"
 
 [extras]
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
