--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "RegisterCore"
 uuid = "67712758-55e7-5c3c-8e85-dda1d7758434"
 authors = ["Tim Holy <tim.holy@gmail.com>"]
-version = "0.2.2"
+version = "0.2.3"
 
 [deps]
 CenterIndexedArrays = "46a7138f-0d70-54e1-8ada-fb8296f91f24"
@@ -11,7 +11,7 @@ Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 
 [compat]
 CenterIndexedArrays = "0.2"
-ImageCore = "0.8.1"
+ImageCore = "0.8.1, 0.9"
 ImageFiltering = "0.5, 0.6"
 Requires = "1"
 julia = "^1.1"
