--- a/Project.toml
+++ b/Project.toml
@@ -11,7 +11,7 @@ Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 
 [compat]
 CenterIndexedArrays = "0.2"
-ImageCore = "0.8.1, 0.9"
+ImageCore = "0.8.1, 0.9, 0.10"
 ImageFiltering = "0.5, 0.6, 0.7"
 Requires = "1"
 julia = "^1.1"
